--- a/loja.html
+++ b/loja.html
@@ -610,7 +610,7 @@ text-decoration: none;
             <a href="tel:1111111111"><h4>(11) 1111-1111</h4></a>
             <h5>Entregamos na sua casa!</h5>
         </div>
-        <img src="C:\Users\aluno\Downloads\loja\Whatsapp-logo-vetor.png"> 
+        <img src="loja/Whatsapp-logo-vetor.png"> 
     </div>
 
 </body>
